<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    >

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ch"
        android:textSize="30dp"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        />

    <EditText
        android:layout_gravity="center_horizontal"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:id="@+id/campo"
        android:text="@string/mensaje"
        android:hint="Tu sexo es:"
        android:textAlignment="gravity"
        android:clickable="false"
        android:editable="false"
        android:textIsSelectable="false" />

    <CheckBox
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chee"
        android:text="@string/m"
        />
    <CheckBox
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cheee"
        android:text="@string/f"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boton"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layoutDirection="inherit"
        android:text="@string/enviar"
        android:layout_gravity="center_horizontal" />



</LinearLayout>
